# bazel-rules-js-sharp-example

./: .bazelignore  .bazelrc  .gitignore  README.md  WORKSPACE.bazel
icon-converter/: BUILD.bazel  package.json  pnpm-lock.yaml
icon-converter/src/: index.js
